--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run:server": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -14,5 +14,19 @@
   "bugs": {
     "url": "https://github.com/komongah/nodejs-express-sample-web-application/issues"
   },
-  "homepage": "https://github.com/komongah/nodejs-express-sample-web-application#readme"
+  "homepage": "https://github.com/komongah/nodejs-express-sample-web-application#readme",
+  "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.20.0",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/register": "^7.18.9",
+    "babel-plugin-module-resolver": "^4.1.0"
+  }
 }
