--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "license": "MIT",
   "description": "",
   "scripts": {
-    "run:server": "node src/index.js"
+    "run:server": "node src/index.js",
+    "server:start": "yarn install && yarn run:server",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.js' --write",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -27,6 +31,10 @@
     "@babel/plugin-proposal-decorators": "^7.20.0",
     "@babel/preset-env": "^7.19.4",
     "@babel/register": "^7.18.9",
-    "babel-plugin-module-resolver": "^4.1.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1"
   }
 }
