--- a/.huskyrc
+++ b/.huskyrc
@@ -1,5 +1,5 @@
 {
   "hooks": {
-    "pre-commit": "yarn lint && yarn prettier-format && lint-staged"
+    "pre-commit": "yarn lint && lint-staged"
   }
 }
