--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "@babel/plugin-transform-runtime": "^7.19.6",
         "body-parser": "^1.20.1",
         "cors": "^2.8.5",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "winston": "^3.8.2",
+        "winston-daily-rotate-file": "^4.7.1"
     },
     "devDependencies": {
         "@babel/core": "^7.19.6",
