--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "sample-web-application",
+    "title": "Sample Web Application",
     "version": "1.0.0",
     "author": "komongah@gmail.com",
     "license": "MIT",
@@ -26,6 +27,8 @@
         "body-parser": "^1.20.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "swagger-jsdoc": "^6.2.5",
+        "swagger-ui-express": "^4.5.0",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1"
     },
