--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
         "body-parser": "^1.20.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "jsonwebtoken": "^8.5.1",
+        "passport": "^0.6.0",
+        "passport-http": "^0.3.0",
+        "passport-http-bearer": "^1.0.1",
         "redoc-cli": "^0.13.20",
         "swagger-jsdoc": "^6.2.5",
         "swagger-ui-express": "^4.5.0",
