--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.7.0",
         "passport": "^0.6.0",
         "passport-http": "^0.3.0",
         "passport-http-bearer": "^1.0.1",
@@ -55,6 +56,7 @@
         "husky": "^8.0.1",
         "lint-staged": "^13.0.3",
         "mocha": "^10.1.0",
+        "mongodb-memory-server": "^8.9.4",
         "nyc": "^15.1.0",
         "pm2": "^5.2.2",
         "prettier": "^2.7.1",
